--- a/desktop.software.console.yml
+++ b/desktop.software.console.yml
@@ -11,45 +11,6 @@
 
     software_console_enabled: true
 
-    software_console_packages:
-      - "bchunk"
-      - "bsdtar"
-      - "cabextract"
-      - "ccd2iso"
-      - "convmv"
-      - "curl"
-      - "daa2iso"
-      - "ffmpeg"
-      - "git"
-      - "glances"
-      - "htop"
-      - "innoextract"
-      - "inxi"
-      - "jdupes"
-      - "jq"
-      - "lshw"
-      - "mc"
-      - "neofetch"
-      - "nrg2iso"
-      - "nvtop"
-      - "openssh"
-      - "p7zip"
-      - "p7zip-plugins"
-      - "ripgrep"
-      - "rsync"
-      - "screen"
-      - "socat"
-      - "sqlite"
-      - "sshfs"
-      - "telnet"
-      - "tldr"
-      - "tmux"
-      - "unace"
-      - "unrar"
-      - "unrar-free"
-      - "vim"
-      - "yt-dlp"
-
   tasks:
 
     - name: "Setup Console Software"
@@ -58,7 +19,44 @@
 
         - name: "Setup Console Software: Install Console Software from Distribution"
           ansible.builtin.dnf:
-            name: "{{ software_console_packages }}"
+            name:
+              - "bchunk"
+              - "bsdtar"
+              - "cabextract"
+              - "ccd2iso"
+              - "convmv"
+              - "curl"
+              - "daa2iso"
+              - "ffmpeg"
+              - "git"
+              - "glances"
+              - "htop"
+              - "innoextract"
+              - "inxi"
+              - "jdupes"
+              - "jq"
+              - "lshw"
+              - "mc"
+              - "neofetch"
+              - "nrg2iso"
+              - "nvtop"
+              - "openssh"
+              - "p7zip"
+              - "p7zip-plugins"
+              - "ripgrep"
+              - "rsync"
+              - "screen"
+              - "socat"
+              - "sqlite"
+              - "sshfs"
+              - "telnet"
+              - "tldr"
+              - "tmux"
+              - "unace"
+              - "unrar"
+              - "unrar-free"
+              - "vim"
+              - "yt-dlp"
             state: "latest"
 
 
