--- a/desktop.software.fcitx.yml
+++ b/desktop.software.fcitx.yml
@@ -8,40 +8,38 @@
 
     software_fcitx_enabled: true
 
-    software_fcitx_packages:
-      - "fcitx5"
-      - "fcitx5-gtk"
-      - "fcitx5-gtk2"
-      - "fcitx5-gtk3"
-      - "fcitx5-gtk4"
-      - "fcitx5-qt"
-      - "fcitx5-qt6"
-      - "fcitx5-lua"
-      - "fcitx5-anthy"
-      - "fcitx5-chewing"
-      - "fcitx5-chinese-addons"
-      - "fcitx5-hangul"
-      - "fcitx5-kkc"
-      - "fcitx5-m17n"
-      - "fcitx5-mozc"
-      - "fcitx5-rime"
-      - "fcitx5-sayura"
-      - "fcitx5-skk"
-      - "fcitx5-table-extra"
-      - "fcitx5-table-other"
-      - "fcitx5-unikey"
-      - "fcitx5-zhuyin"
-      - "fcitx5-zhuyin-data"
-      - "kcm-fcitx5"
-      - "imsettings"
-      - "imsettings-qt"
-      - "imsettings-plasma"
-
   tasks:
 
     - name: "Setup Fcitx Input Method: Install Fcitx 5 from Distribution"
       ansible.builtin.dnf:
-        name: "{{ software_fcitx_packages }}"
+        name:
+          - "fcitx5"
+          - "fcitx5-gtk"
+          - "fcitx5-gtk2"
+          - "fcitx5-gtk3"
+          - "fcitx5-gtk4"
+          - "fcitx5-qt"
+          - "fcitx5-qt6"
+          - "fcitx5-lua"
+          - "fcitx5-anthy"
+          - "fcitx5-chewing"
+          - "fcitx5-chinese-addons"
+          - "fcitx5-hangul"
+          - "fcitx5-kkc"
+          - "fcitx5-m17n"
+          - "fcitx5-mozc"
+          - "fcitx5-rime"
+          - "fcitx5-sayura"
+          - "fcitx5-skk"
+          - "fcitx5-table-extra"
+          - "fcitx5-table-other"
+          - "fcitx5-unikey"
+          - "fcitx5-zhuyin"
+          - "fcitx5-zhuyin-data"
+          - "kcm-fcitx5"
+          - "imsettings"
+          - "imsettings-qt"
+          - "imsettings-plasma"
         state: "latest"
 
 
