--- a/desktop.software.java.yml
+++ b/desktop.software.java.yml
@@ -8,19 +8,6 @@
 
     software_java_enabled: true
 
-    software_java_packages:
-      - "java-1.8.0-openjdk"
-      - "java-1.8.0-openjdk-devel"
-      - "java-11-openjdk"
-      - "java-11-openjdk-devel"
-      - "java-17-openjdk"
-      - "java-17-openjdk-devel"
-      - "java-latest-openjdk"
-      - "java-latest-openjdk-devel"
-      - "ant"
-      - "apache-ivy"
-      - "maven"
-
   tasks:
 
     - name: "Setup Java Development Tools"
@@ -29,7 +16,18 @@
 
         - name: "Install Java Development Tools: Install Java from Distribution"
           ansible.builtin.dnf:
-            name: "{{ software_java_packages }}"
+            name:
+              - "java-1.8.0-openjdk"
+              - "java-1.8.0-openjdk-devel"
+              - "java-11-openjdk"
+              - "java-11-openjdk-devel"
+              - "java-17-openjdk"
+              - "java-17-openjdk-devel"
+              - "java-latest-openjdk"
+              - "java-latest-openjdk-devel"
+              - "ant"
+              - "apache-ivy"
+              - "maven"
             state: "latest"
 
 
