--- a/desktop.software.mysql.yml
+++ b/desktop.software.mysql.yml
@@ -8,10 +8,6 @@
 
     software_mysql_enabled: true
 
-    software_mysql_packages:
-      - "mariadb"
-      - "mariadb-server"
-
   tasks:
 
     - name: "Setup Mysql/Mariadb Database Server"
@@ -20,7 +16,9 @@
 
         - name: "Setup Mysql/Mariadb Database Server: Install Mariadb from Distribution"
           ansible.builtin.dnf:
-            name: "{{ software_mysql_packages }}"
+            name:
+              - "mariadb"
+              - "mariadb-server"
             state: "latest"
 
 
