--- a/desktop.software.php.yml
+++ b/desktop.software.php.yml
@@ -8,30 +8,6 @@
 
     software_php_enabled: true
 
-    software_php_packages:
-      - "composer"
-      - "php-bcmath"
-      - "php-cli"
-      - "php-dba"
-      - "php-dbg"
-      - "php-enchant"
-      - "php-ffi"
-      - "php-gd"
-      - "php-gmp"
-      - "php-intl"
-      - "php-ldap"
-      - "php-mbstring"
-      - "php-mysqlnd"
-      - "php-opcache"
-      - "php-pdo"
-      - "php-pgsql"
-      - "php-process"
-      - "php-pspell"
-      - "php-soap"
-      - "php-sodium"
-      - "php-tidy"
-      - "php-xml"
-
   tasks:
 
     - name: "Setup PHP Development Tools"
@@ -40,7 +16,29 @@
 
         - name: "Setup PHP Development Tools: Install PHP from Distribution"
           ansible.builtin.dnf:
-            name: "{{ software_php_packages }}"
+            name:
+              - "composer"
+              - "php-bcmath"
+              - "php-cli"
+              - "php-dba"
+              - "php-dbg"
+              - "php-enchant"
+              - "php-ffi"
+              - "php-gd"
+              - "php-gmp"
+              - "php-intl"
+              - "php-ldap"
+              - "php-mbstring"
+              - "php-mysqlnd"
+              - "php-opcache"
+              - "php-pdo"
+              - "php-pgsql"
+              - "php-process"
+              - "php-pspell"
+              - "php-soap"
+              - "php-sodium"
+              - "php-tidy"
+              - "php-xml"
             state: "latest"
 
 
