--- a/desktop.software.python.yml
+++ b/desktop.software.python.yml
@@ -8,12 +8,6 @@
 
     software_python_enabled: true
 
-    software_python_packages:
-      - "python3"
-      - "python3-pip"
-      - "python3-setuptools"
-      - "python3-virtualenv"
-
   tasks:
 
     - name: "Setup Python Development Tools"
@@ -22,7 +16,11 @@
 
         - name: "Setup Python Development Tools: Install Python from Distribution"
           ansible.builtin.dnf:
-            name: "{{ software_python_packages }}"
+            name:
+              - "python3"
+              - "python3-pip"
+              - "python3-setuptools"
+              - "python3-virtualenv"
             state: "latest"
 
 
