--- a/desktop.hardware.kvm.yml
+++ b/desktop.hardware.kvm.yml
@@ -15,7 +15,7 @@
     - name: "Configure Kernel-Based Virtual Machine: Enable Kernel Modules at Boot"
       ansible.builtin.template:
         dest: "/etc/modules-load.d/kvm.conf"
-        src: "{{ playbook_dir }}/files/etc/modules-load.d/kvm.conf.j2"
+        src: "{{ playbook_dir }}/files/desktop/etc/modules-load.d/kvm.conf.j2"
         owner: "root"
         group: "root"
         mode: "0644"
@@ -23,7 +23,7 @@
     - name: "Configure Kernel-Based Virtual Machine: Update Kernel Module Parameters"
       ansible.builtin.template:
         dest: "/etc/modprobe.d/kvm.conf"
-        src: "{{ playbook_dir }}/files/etc/modprobe.d/kvm.conf.j2"
+        src: "{{ playbook_dir }}/files/desktop/etc/modprobe.d/kvm.conf.j2"
         owner: "root"
         group: "root"
         mode: "0644"
