--- a/desktop.service.ddclient.yml
+++ b/desktop.service.ddclient.yml
@@ -32,7 +32,7 @@
         - name: "Setup DDClient Service: Update Default Configuration Files"
           ansible.builtin.blockinfile:
             dest: "/etc/ddclient.conf"
-            block: "{{ lookup('ansible.builtin.template', '{{ playbook_dir }}/files/etc/ddclient.conf.j2') }}"
+            block: "{{ lookup('ansible.builtin.template', '{{ playbook_dir }}/files/desktop/etc/ddclient.conf.j2') }}"
             owner: "ddclient"
             group: "ddclient"
             mode: "0600"
