--- a/desktop.service.php_fpm.yml
+++ b/desktop.service.php_fpm.yml
@@ -46,7 +46,7 @@
         - name: "Setup PHP FPM Service: Install Custom Configuration Files"
           ansible.builtin.template:
             dest: "{{ item.path }}"
-            src: "{{ playbook_dir }}/files/{{ item.path }}.j2"
+            src: "{{ playbook_dir }}/files/desktop/{{ item.path }}.j2"
             owner: "{{ item.owner|default('root') }}"
             group: "{{ item.group|default('root') }}"
             mode: "{{ item.group|default('0644') }}"
