--- a/desktop.system.sddm.yml
+++ b/desktop.system.sddm.yml
@@ -27,7 +27,7 @@
         - name: "Setup SDDM: Install Configuration Files"
           ansible.builtin.template:
             dest: "{{ item.path }}"
-            src: "{{ playbook_dir }}/files/{{ item.path }}.j2"
+            src: "{{ playbook_dir }}/files/desktop/{{ item.path }}.j2"
             owner: "{{ item.owner|default('root') }}"
             group: "{{ item.group|default('root') }}"
             mode: "{{ item.mode|default('0644') }}"
