--- a/desktop.hardware.video.yml
+++ b/desktop.hardware.video.yml
@@ -71,7 +71,7 @@
     - name: "Configuring Video Cards: Install Configuration Files"
       ansible.builtin.template:
         dest: "{{ item.path }}"
-        src: "{{ playbook_dir }}/files/{{ item.path }}.j2"
+        src: "{{ playbook_dir }}/files/desktop/{{ item.path }}.j2"
         owner: "{{ item.owner|default('root') }}"
         group: "{{ item.group|default('root') }}"
         mode: "{{ item.mode|default('0644') }}"
