--- a/desktop.service.certbot.yml
+++ b/desktop.service.certbot.yml
@@ -39,7 +39,7 @@
         - name: "Setup Certbot Service: Install Extra Configuration Files"
           ansible.builtin.template:
             dest: "{{ item.path }}"
-            src: "files/{{ item.path }}.j2"
+            src: "{{ playbook_dir }}/files/desktop/{{ item.path }}.j2"
             owner: "{{ item.owner|default('root') }}"
             group: "{{ item.group|default('root') }}"
             mode: "{{ item.group|default('0644') }}"
