Create Basic Playbooks for Server
This commit adds new playbooks for server based on the current
desktop playbooks.

Note that some files are now shared between the desktop and server
playbooks; these files are moved to the files/common subdirectory.

--- a/server.system.kvm.yml
+++ b/server.system.kvm.yml
@@ -1,14 +1,8 @@
 
 
-- hosts: "desktop"
+- hosts: "server"
   become: true
   become_user: "root"
-
-  vars:
-
-    system_kvm_ignore_msrs: true
-    system_kvm_amd_avic: true
-    system_kvm_amd_npt: true
 
   tasks:
 
