--- a/desktop.service.mosquitto.yml
+++ b/desktop.service.mosquitto.yml
@@ -11,17 +11,29 @@
 
     service_mosquitto_enabled: true
 
+    service_mosquitto_listeners:
+      mqtt:
+        public_ip: "127.0.0.1"
+        public_port: 1883
+      mqtt_over_websocket:
+        public_ip: "127.0.0.1"
+        public_port: 17777
+
+    service_mosquitto_users:
+      anonymous:
+        enabled: false
+        permissions: []
+      accounts:
+        kmchan:
+          password: "{{ service_mosquitto_passwords['kmchan'] }}"
+          permissions:
+            - { topic: "#", access: "readwrite" }
+
     service_mosquitto_options:
-      - "allow_anonymous true"
       - "log_type none"
       - "log_type error"
       - "log_type warning"
       - "log_type notice"
-
-    service_mosquitto_listeners:
-      mqtt_over_websocket:
-        public_ip: "127.0.0.1"
-        public_port: 17777
 
   tasks:
 
@@ -29,43 +41,94 @@
       when: "service_mosquitto_enabled|default(false)"
       block:
 
+        - name: "Setup Mosquitto Service: Determine Podman Version"
+          ansible.builtin.package_facts:
+            manager: "rpm"
+
+        - name: "Setup Mosquitto Service: Load Account Passwords"
+          ansible.builtin.include_vars:
+            file: "secrets/service.mosquitto.vault"
+
+        - name: "Setup Mosquitto Service: Create Mosquitto Group"
+          ansible.builtin.group:
+            name: "mosquitto"
+            state: "present"
+            system: true
+          register: "service_mosquitto_group"
+
+        - name: "Setup Mosquitto Service: Create Mosquitto Account"
+          ansible.builtin.user:
+            name: "mosquitto"
+            state: "present"
+            group: "mosquitto"
+            password: "!"
+            system: true
+            home: "/"
+            shell: "/sbin/nologin"
+            comment: "Mosquitto Broker"
+            create_home: false
+          register: "service_mosquitto_user"
+
         - name: "Setup Mosquitto Service: Create Configuration Directory"
           ansible.builtin.file:
-            dest: "{{ item.name }}"
+            dest: "/etc/mosquitto"
             state: "directory"
-            owner: "{{ item.owner|default('root') }}"
-            group: "{{ item.group|default('root') }}"
-            mode: "{{ item.group|default('0755') }}"
-          loop:
-            - { name: "/etc/mosquitto" }
-            - { name: "/etc/mosquitto/container" }
+            owner: "mosquitto"
+            group: "mosquitto"
+            mode: "0755"
 
-        - name: "Setup Mosquitto Service: Install Basic Configuration Files"
+        - name: "Setup Mosquitto Service: Install Configuration Files"
           ansible.builtin.template:
-            dest: "/etc/mosquitto/container/{{ item.name }}"
-            src: "{{ playbook_dir }}/files/desktop/etc/mosquitto/container/{{ item.name }}.j2"
-            owner: "{{ item.owner|default('root') }}"
-            group: "{{ item.group|default('root') }}"
-            mode: "{{ item.group|default('0644') }}"
+            dest: "/etc/mosquitto/{{ item.name }}"
+            src: "{{ playbook_dir }}/files/common/etc/mosquitto/{{ item.name }}.j2"
+            owner: "{{ item.owner|default('mosquitto') }}"
+            group: "{{ item.group|default('mosquitto') }}"
+            mode: "{{ item.mode|default('0644') }}"
           loop:
-            - { name: "00-common.conf" }
-            - { name: "01-listeners.conf" }
+            - { name: "mosquitto.conf" }
+            - { name: "aclfile", mode: "0600" }
+            - { name: "pwfile.sh", mode: "0600" }
 
-        - name: "Setup Mosquitto Service: Install Extra Configuration Files"
-          ansible.builtin.copy:
-            dest: "/etc/mosquitto/container/{{ item.name }}"
-            src: "{{ playbook_dir }}/files/desktop/etc/mosquitto/container/{{ item.name }}"
-            owner: "{{ item.owner|default('root') }}"
-            group: "{{ item.group|default('root') }}"
-            mode: "{{ item.group|default('0644') }}"
-          loop: "{{ service_mosquitto_files|default([]) }}"
+        - name: "Setup Mosquitto Service: Install Placeholder Password File"
+          ansible.builtin.file:
+            dest: "/etc/mosquitto/pwfile"
+            state: "touch"
+            owner: "mosquitto"
+            group: "mosquitto"
+            mode: "0600"
 
-        - name: "Setup Mosquitto Service: Generate Systemd Container File"
+        - name: "Setup Mosquitto Service: Install Podman Quadlet Files"
           ansible.builtin.template:
-            dest: "/etc/containers/systemd/mosquitto-container.container"
-            src: "{{ playbook_dir }}/files/desktop/etc/containers/systemd/mosquitto-container.container.j2"
+            dest: "{{ item }}"
+            src: "{{ playbook_dir }}/files/common/{{ item }}.j2"
             owner: "root"
             group: "root"
             mode: "0644"
+          loop:
+            - "/etc/containers/systemd/mosquitto.container"
+            - "/etc/containers/systemd/mosquitto.network"
+            - "/etc/containers/systemd/mosquitto-password-update.container"
+
+        - name: "Setup Mosquitto Service: Install Firewalld Configuration Files"
+          ansible.builtin.template:
+            dest: "{{ item }}"
+            src: "{{ playbook_dir }}/files/common/{{ item }}.j2"
+            owner: "root"
+            group: "root"
+            mode: "0644"
+          loop:
+            - "/etc/firewalld/services/mosquitto.xml"
+            - "/etc/firewalld/zones/mosquitto.xml"
+
+        - name: "Setup Mosquitto Service: Add Service to Firewalld Zones"
+          ansible.posix.firewalld:
+            zone: "{{ item }}"
+            service: "mosquitto"
+            state: "enabled"
+            permanent: true
+            offline: true
+          loop: "{{ service_mosquitto_firewall_zones|default([]) }}"
+          retries: 3
+          delay: 5
 
 
