--- a/server.service.yml
+++ b/server.service.yml
@@ -2,5 +2,6 @@
 
 - import_playbook: "server.service.caddy.yml"
 - import_playbook: "server.service.mosquitto.yml"
+- import_playbook: "server.service.zigbee2mqtt.yml"
 
 
