--- a/desktop.software.podman.yml
+++ b/desktop.software.podman.yml
@@ -31,4 +31,24 @@
             group: "root"
             mode: "0644"
 
+        - name: "Setup Podman Container Runtime: Update Avahi Configuration File"
+          ansible.builtin.lineinfile:
+            path: "/etc/avahi/avahi-daemon.conf"
+            create: false
+            state: "present"
+            regexp: "{{ item.regexp }}"
+            line: "{{ item.line }}"
+            backrefs: "{{ item.backrefs }}"
+            insertafter: '^\[server\]\s*$'
+          loop:
+            - regexp: '^[#%].*deny-interfaces\s*=.*$'
+              line: 'deny-interfaces=podman0'
+              backrefs: true
+            - regexp: '^\s*deny-interfaces\s*=\s*$'
+              line: 'deny-interfaces=podman0'
+              backrefs: true
+            - regexp: '^\s*deny-interfaces\s*=\s*((?!(\s*[A-Za-z0-9\-\_]+\s*,)*\s*podman0\s*(,\s*[A-Za-z0-9\-\_]+\s*)*).*)\s*$'
+              line: 'deny-interfaces=\1, podman0'
+              backrefs: true
+
 
