--- a/server.service.caddy.yml
+++ b/server.service.caddy.yml
@@ -108,4 +108,27 @@
           retries: 3
           delay: 5
 
+        - name: "Setup Caddy Service: Update Avahi Configuration File"
+          ansible.builtin.lineinfile:
+            path: "/etc/avahi/avahi-daemon.conf"
+            create: false
+            state: "present"
+            regexp: "{{ item.regexp }}"
+            line: "{{ item.line }}"
+            backrefs: "{{ item.backrefs }}"
+            insertafter: '^\[server\]\s*$'
+          loop:
+            - regexp: '^[#%].*deny-interfaces\s*=.*$'
+              line: 'deny-interfaces=caddy, caddyctrl'
+              backrefs: true
+            - regexp: '^\s*deny-interfaces\s*=\s*$'
+              line: 'deny-interfaces=caddy, caddyctrl'
+              backrefs: true
+            - regexp: '^\s*deny-interfaces\s*=\s*((?!(\s*[A-Za-z0-9\-\_]+\s*,)*\s*caddy\s*(,\s*[A-Za-z0-9\-\_]+\s*)*).*)\s*$'
+              line: 'deny-interfaces=\1, caddy'
+              backrefs: true
+            - regexp: '^\s*deny-interfaces\s*=\s*((?!(\s*[A-Za-z0-9\-\_]+\s*,)*\s*caddyctrl\s*(,\s*[A-Za-z0-9\-\_]+\s*)*).*)\s*$'
+              line: 'deny-interfaces=\1, caddyctrl'
+              backrefs: true
+
 
