Extra Software for the Disk Playbook
Extra packages are installed in the disk playbook for monitoring
and reporting disk temperature. Note that drivetemp is not available
in RHEL9 and clones, so it cannot be used here for now.

--- a/server.system.disk.yml
+++ b/server.system.disk.yml
@@ -9,8 +9,13 @@
     - name: "Configure Disk Support: Install Tools from Distribution"
       ansible.builtin.dnf:
         name:
+          - "hddtemp"
           - "nvme-cli"
           - "smartmontools"
+          - "udisks2"
+          - "udisks2-iscsi"
+          - "udisks2-lsm"
+          - "udisks2-lvm2"
         state: "latest"
 
 
