Ramdrive on Server
The filesystem playbook for server is updated to mount a ramdrive
for temporary data storage.

--- a/server.system.filesystem.yml
+++ b/server.system.filesystem.yml
@@ -28,6 +28,11 @@
         filesystem: "ext4"
         options: "nofail,x-systemd.mount-timeout=5"
 
+      - device: "tmpfs"
+        mountpoint: "/mnt/ramdrive"
+        filesystem: "tmpfs"
+        options: "size=24G,mode=1777,nodev,nosuid"
+
   tasks:
 
     - name: "Configure Filesystem Support: Install Tools from Distribution"
