Playbook for Network File Server
A playbook is added to setup network file server to serve
the files in the data disks to the desktop.

--- a/server.system.yml
+++ b/server.system.yml
@@ -10,6 +10,7 @@
 - import_playbook: "server.system.lvm.yml"
 - import_playbook: "server.system.mdraid.yml"
 - import_playbook: "server.system.networkd.yml"
+- import_playbook: "server.system.nfs.yml"
 - import_playbook: "server.system.sensor.yml"
 
 
