--- a/server.system.yml
+++ b/server.system.yml
@@ -1,11 +1,13 @@
 
 
 - import_playbook: "server.system.ansible.yml"
+- import_playbook: "server.system.avahi.yml"
 - import_playbook: "server.system.disk.yml"
 - import_playbook: "server.system.dnf.yml"
 - import_playbook: "server.system.driverctl.yml"
 - import_playbook: "server.system.filesystem.yml"
 - import_playbook: "server.system.firewalld.yml"
+- import_playbook: "server.system.kvm.yml"
 - import_playbook: "server.system.luks.yml"
 - import_playbook: "server.system.lvm.yml"
 - import_playbook: "server.system.mdraid.yml"
